crates/eure-macros/tests/compile_fail/object_key_struct_variant.rs
use eure::ObjectKey;

#[derive(ObjectKey)]
enum Bad {
    Ok,
    Named { field: i32 },
}

fn main() {}
