crates/eure-macros/tests/compile_fail/object_key_struct_variant.stderr
error: ObjectKey only supports unit variants
 --> tests/compile_fail/object_key_struct_variant.rs:6:5
  |
6 |     Named { field: i32 },
  |     ^^^^^^^^^^^^^^^^^^^^
